# pandas

./: DataFrame_malumotlar_tuzilmasi.ipynb  README.md  pyproject.toml  series_malumotlar_tuzilmasi.ipynb
src/choyxona_bot/: __init__.py  bot.py  config.py  menu.py  schemas.py  storage.py  webapp.py
src/choyxona_bot/templates/: index.html
