[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "choyxona-telegram-webapp"
version = "0.1.0"
description = "Telegram Web App bot for managing choyxona orders"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Choyxona Automation", email = "support@example.com" }]
dependencies = [
    "python-telegram-bot>=20.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "jinja2>=3.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[tool.setuptools.packages.find]
where = ["src"]
